[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-py"
version = "0.7.8"
license = "GPL-3.0-or-later"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "Assembly for Design & Analysis - A python library for structural analysis and design"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
[project.scripts]
ada-viewer = "ada.comms.wsock_cli:ws_cli_app"

[project.urls]
"Homepage" = "https://github.com/Krande/adapy"
"Bug Tracker" = "https://github.com/Krande/adapy/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ada*"]
exclude = ["frontend*", "flatbuffers*"]

[tool.setuptools.package-data]
ada = [
    "sections/resources/ProfileDB.json",
    "materials/metals/resources/NLMatParams.json",
    "cadit/gxml/write/resources/xml_blank.xml",
    "fem/results/resources/results.sql",
    "visit/rendering/resources/index.zip"
]


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = ["examples/", ".pixi/", "temp/"]
# Tell Ruff where your source root is so it can classify first-party imports
src = ["src"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.format]
# Ruff's formatter is compatible with Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configure import sorting (replaces isort)
# Remove the 'profile' line - ruff doesn't use profiles
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.isort]
profile = "black"
# Keep isort happy during transition; match Ruff’s view of the world
src_paths = ["src"]
skip = [".pixi", "node_modules", "temp", "examples"]
skip_glob = ["**/node_modules/**", "**/temp/**", "**/_build/**"]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
# This is meant to stop and catch any unintended hangs
timeout = 600
timeout_method = "thread"
addopts = "--basetemp=temp"
asyncio_mode = "auto"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.environments]
prod = { features = ["prod"], solve-group = "prod", no-default-feature = true }
lint = { features = ["lint"], no-default-feature = true }
profile = { features = ["profile", "prod"], solve-group = "prod", no-default-feature = true }
frontend = { features = ["frontend"], no-default-feature = true }
jupyterlite = { features = ["jupyterlite"], no-default-feature = true }

tests-core = { features = ["tests-core"], no-default-feature = true }
tests = { features = ["tests", "tests-core", "prod"], solve-group = "prod", no-default-feature = true }
fem-deps = { features = ["fem-deps", "prod", "tests-core"], no-default-feature = true }
fem = { features = ["fem", "prod", "tests-core", "fem-deps"], no-default-feature = true }
docs = { features = ["docs", "prod", "fem-deps", "tests-core"], no-default-feature = true }

[tool.pixi.feature.jupyterlite.dependencies]
jupyterlite-core = "*"

[tool.pixi.feature.prod.dependencies]
python = "3.12.*"
notebook = "*"  # For the notebook
bcf-client = "*"
numpy = "*"
hdf5 = "*"
h5py = "*"
ifcopenshell = "*"
pythonocc-core = "*"
python-gmsh = "*"
pyquaternion = "*"
trimesh = "*"
occt = "==7.8.1"
send2trash = "*"
meshio = "*"
websockets = ">=14"
plotly = "*"
python-kaleido = ">=1.0.0"
ipywidgets = "*"
jupyterlab = "*"
pyparsing = "*"
glfw = "==3.4"
pyglfw = "*"
pygfx = ">=0.13"
flatbuffers = "*"
python-flatbuffers = "*"
lark = "*"
pillow = "*"
pydantic = "*"

[tool.pixi.feature.prod.target.win-64.dependencies]
# Needed to fix issue with running from pycharm locally (llvm-openmp only works from pixi shell).
intel-openmp = "*"

# For local development
[tool.pixi.feature.prod.target.win-64.activation.env]
PYTHONPATH="%PIXI_PROJECT_ROOT%/src"

[tool.pixi.feature.fem-deps]
channels = ["https://repo.prefix.dev/code-aster", "conda-forge"]
[tool.pixi.feature.fem]
channels = ["https://repo.prefix.dev/code-aster", "conda-forge"]
[tool.pixi.feature.docs]
channels = ["https://repo.prefix.dev/code-aster", "conda-forge"]


[tool.pixi.feature.fem-deps.dependencies]
calculix = "*"

[tool.pixi.feature.fem-deps.target.linux-64.dependencies]
# These are not available on conda-forge
code-aster = "*"

[tool.pixi.feature.fem-deps.target.win-64.dependencies]

code-aster = { version = "*", channel = "https://repo.prefix.dev/code-aster" }
# Attempt to update to the latest version of the dependencies
#code-aster = { version = "==17.2.8.1", channel = "https://repo.prefix.dev/code-aster" }
#ifcopenshell = { version = "==0.8.1.250324", channel = "https://repo.prefix.dev/code-aster" }
#hdf5 = { version = "==1.14.6", channel = "https://repo.prefix.dev/code-aster" }
#gmsh = { version = "==4.13.1" , build="nompi_release_he31cdec_300", channel = "https://repo.prefix.dev/code-aster" }
#python-gmsh = { version = "==4.13.1" , channel = "https://repo.prefix.dev/code-aster" }
#scotch = { version = "*" , channel = "https://repo.prefix.dev/code-aster" }
#libscotch = { version = "*" , channel = "https://repo.prefix.dev/code-aster" }
#mumps = { version = "*" , channel = "https://repo.prefix.dev/code-aster" }
#metis = { version = "*" , channel = "https://repo.prefix.dev/code-aster" }
#fltk = { version = "*" , channel = "C:/AibelProgs/code/condapackaging/output" }
#calculix = { version = "==2.22", build="*_1", channel = "conda-forge" }

[tool.pixi.feature.tests-core.dependencies]
pytest = "*"
pytest-benchmark = "*"
pytest-asyncio = "*"
pytest-timeout = "*"
pytest-cov = "*"
paradoc = "*"
python-dotenv = "*"
watchdog = "*"

[tool.pixi.feature.profile.dependencies]
pytest = "*"
pytest-benchmark = "*"
pytest-asyncio = "*"
pyinstrument = "*"

# Editable installs
[tool.pixi.feature.tests.pypi-dependencies]
pytest-playwright = "*"

[tool.pixi.feature.lint.dependencies]
black = "==24.4.2"
isort = "==5.13.2"
ruff = "==0.12.8"

flatbuffers = "==25.2.10"
python-flatbuffers = "==25.2.10"
datamodel-code-generator = "==0.30.1"

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
furo = "*"
myst-parser = "*"
nbsphinx = "*"
scipy = "*"
fastapi = "*"  # For the API docs
pandas = "*"

[tool.pixi.feature.frontend.dependencies]
nodejs = "*"
flatbuffers = "==25.2.10"

[tool.pixi.feature.lint.tasks]
lint = "black . --config pyproject.toml && ruff check . --fix && isort ."
flat = { cmd = "python src/flatbuffers/update_flatbuffers.py && pixi run lint", cwd = "./" }

json-code-gen-py = { cmd = [
    "datamodel-codegen",
    "--input", "src/gltf_extension_schema",
    "--input-file-type", "jsonschema",
    "--output", "src/ada/extension",
    "--output-model-type", "pydantic_v2.BaseModel"], cwd = "./" }


[tool.pixi.feature.docs.tasks]
docs = { cmd = "cd docs && sphinx-build -b html -v . _build/html", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
serve = { cmd = "python docs/main.py", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" }, depends-on = ["docs"] }
fem-doc = { cmd = "python build_verification_report.py true true --export-format=docx", cwd = "./tests/fem/verification_report", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
serve-fem = { cmd = "python doc_live_html.py", cwd = "./tests/fem", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }

[tool.pixi.feature.tests.tasks]
pre-install = { cmd = "playwright install --with-deps chromium", outputs = ["$PIXI_HOME/envs/tests/Scripts/playwright.exe"] }

test = { cmd = "pytest tests --ignore=tests/profiling --ignore=tests/fem --durations=0", depends-on = ["pre-install"], env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
test-core = { cmd = "pytest tests/core --durations=0", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
test-full = { cmd = "pytest tests/full --durations=0", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
test-cov = { cmd = "pytest tests --ignore=tests/profiling --ignore=tests/fem --cov=src/ada --cov-report=html --cov-report=term --durations=0", depends-on = ["pre-install"], env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }

[tool.pixi.feature.fem.tasks]
test-all = { cmd = "pytest tests --durations=0", depends-on = ["pre-install"], env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
test-fem = { cmd = "pytest tests/fem --durations=0", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
test-basic-fem = { cmd = "python basic_fem.py", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" }, cwd = "examples" }
test-fem-viz = { cmd = "pytest tests/fem/visualization --durations=0", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }

print-paths = { cmd = "python -c \"import sys, os; print('\\n'.join(sys.path + os.environ.get('PYTHONPATH', '').split(os.pathsep)))\"" }

[tool.pixi.feature.frontend.tasks]
npm = { cmd = "npm", cwd = "./src/frontend" }
winstall = { cmd = "npm install", cwd = "./src/frontend", outputs = ["$PIXI_PROJECT_ROOT/src/frontend/node_modules"] }
wdev = { cmd = "npm run dev", cwd = "./src/frontend", depends-on = ["winstall"] }
wbuild = { cmd = "npm run build", cwd = "./src/frontend", depends-on = ["winstall"] }
fdepcheck = { cmd = "depcheck", cwd = "./src/frontend", depends-on = ["winstall"] }

json-code-gen-ts = { cmd = [
    "npx", "--yes", "-p", "json-schema-to-typescript", "json2ts",
    "--input","design_and_analysis_extension.schema.json",
    "--output","$PIXI_PROJECT_ROOT/src/frontend/src/extensions/design_and_analysis_extension.d.ts"], depends-on = ["json-code-gen-py"], env = { "npm_config_cache" = "$PIXI_PROJECT_ROOT/temp/npm_config" }, cwd="src/gltf_extension_schema/" }

[tool.pixi.feature.profile.tasks]
scalene = { cmd = "scalene --json -m pytest ./tests/profiling --outfile=profile.json", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
cprofile = { cmd = "python -m cProfile -o profile.prof -m pytest ./tests/profiling", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
pyprofile = { cmd = "pyinstrument -m pytest ./tests/profiling", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
pyprofile-all = { cmd = "pyinstrument -m pytest ./tests", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
pyprofile-html = { cmd = "pyinstrument -r html -o profile_profiling_tests.html -m pytest ./tests/profiling", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }
pyprofile-html-all = { cmd = "pyinstrument -r html -o profile_all_tests.html -m pytest ./tests", env = { "PYTHONPATH" = "$PIXI_PROJECT_ROOT/src" } }

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.8,<0.0.9"

[tool.pixi.feature.jupyterlite.tasks]
jl-init = { cmd = "jupyter lite init", cwd = "./src/jupyterlite" }
jl-build = { cmd = "jupyter lite build --output-dir=dist", cwd = "./src/jupyterlite" }
jl-serve = { cmd = "jupyter lite serve --output-dir=dist --port=8899", cwd = "./src/jupyterlite" }
