[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-py"
version = "0.7.12"
license = "GPL-3.0-or-later"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "Assembly for Design & Analysis - A python library for structural analysis and design"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
[project.scripts]
ada-viewer = "ada.comms.wsock_cli:ws_cli_app"

[project.urls]
"Homepage" = "https://github.com/Krande/adapy"
"Bug Tracker" = "https://github.com/Krande/adapy/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ada*"]
exclude = ["frontend*", "flatbuffers*"]

[tool.setuptools.package-data]
ada = [
    "sections/resources/ProfileDB.json",
    "materials/metals/resources/NLMatParams.json",
    "cadit/gxml/write/resources/xml_blank.xml",
    "fem/results/resources/results.sql",
    "visit/rendering/resources/index.zip"
]


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = ["examples/", ".pixi/", "temp/"]
# Tell Ruff where your source root is so it can classify first-party imports
src = ["src"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.format]
# Ruff's formatter is compatible with Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configure import sorting (replaces isort)
# Remove the 'profile' line - ruff doesn't use profiles
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.isort]
profile = "black"
# Keep isort happy during transition; match Ruff’s view of the world
src_paths = ["src"]
skip = [".pixi", "node_modules", "temp", "examples"]
skip_glob = ["**/node_modules/**", "**/temp/**", "**/_build/**"]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
# This is meant to stop and catch any unintended hangs
timeout = 600
timeout_method = "thread"
addopts = "--basetemp=temp"
asyncio_mode = "auto"