[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-py"
version = "0.30.1"
license = "GPL-3.0-or-later"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "Assembly for Design & Analysis - A python library for structural analysis and design"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
[project.scripts]
ada = "ada_cli.main:main"

# paradoc plugin surface. paradoc's startup walks
# ``importlib.metadata.entry_points(group="paradoc.figure_sources")``
# and calls each entry point with its dispatcher so adapy (and other
# packages) can register `<!-- paradoc:figure -->` block-sugar handlers
# without paradoc needing to know about adapy by name.
#
# ``fea_artefact_bundle`` is the discriminator a user puts on
# ``figure_source:`` in markdown; the handler bakes the result file
# referenced by ``source_inp:`` into a bundle dir, registers the
# ThreeDData rows, and emits the static + interactive figure pair.
# The implementation is staged across steps 1-2 (bake + descriptor)
# and step 6 (dispatcher wire-up); the entry point can be declared
# today because `register_paradoc_block_sugar` is a no-op stub until
# then.
[project.entry-points."paradoc.figure_sources"]
fea_artefact_bundle = "ada.fem.results.docs:register_paradoc_block_sugar"

[project.urls]
"Homepage" = "https://github.com/Krande/adapy"
"Bug Tracker" = "https://github.com/Krande/adapy/issues"



































[tool.setuptools.packages.find]
where = ["src"]
include = ["ada*", "ada_cli*"]
exclude = ["frontend*", "flatbuffers*"]

[tool.setuptools.package-data]
ada = [
    "sections/resources/ProfileDB.json",
    "materials/metals/resources/NLMatParams.json",
    "cadit/gxml/write/resources/xml_blank.xml",
    "fem/results/resources/results.sql",
    "visit/rendering/resources/index.zip"
]


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = ["examples/", ".pixi/", "temp/"]
# Tell Ruff where your source root is so it can classify first-party imports
src = ["src"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.format]
# Ruff's formatter is compatible with Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configure import sorting (replaces isort)
# Remove the 'profile' line - ruff doesn't use profiles
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.isort]
profile = "black"
# Keep isort happy during transition; match Ruff’s view of the world
src_paths = ["src"]
skip = [".pixi", "node_modules", "temp", "examples"]
skip_glob = ["**/node_modules/**", "**/temp/**", "**/_build/**"]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    # REST tests whose assertions specifically exercise the adacpp NGEOM streaming tessellator
    # (tessellate_stream). Run under the viewer-api-tests-adacpp env (`test-rest-adacpp`); they
    # also pass under OCC via the object-path fallback in the plain viewer-api-tests leg.
    "adacpp_stream: REST test exercising the adacpp streaming tessellation path",
]
# This is meant to stop and catch any unintended hangs
timeout = 600
timeout_method = "thread"
addopts = "--basetemp=temp"
asyncio_mode = "auto"