[metadata]
name = ada-py
version = 0.0.3
author = Kristoffer H. Andersen
author_email = kristoffer_andersen@outlook.com
description = Assembly for Design & Analysis - A toolkit for structural analysis and design
url = https://github.com/krande/adapy
project_urls =
    Code=https://github.com/krande/adapy
    Issues=https://github.com/krande/adapy/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    Python
    Data Science
    Structural Analysis
    Interoperability
    IFC
    CAD
    Automation
    file formats
    scientific
    engineering
    finite elements

[options]
package_dir =
    = src
packages = find:
install_requires =
    gmsh
    meshio[all]
    vtk
    pandas
    toolz
    pyquaternion
    lmfit
    ccx2paraview
    jupyterlab
    pythreejs
    pyparsing
    plotly
    kaleido
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[flake8]
max-line-length = 120
ignore = E24, E121, E123, E126, E203, E226, E704, E741, W503, W504