[bumpversion]
current_version = 0.0.38
commit = True
tag = True

[metadata]
name = ada-py
version = 0.0.37
author = Kristoffer H. Andersen
author_email = kristoffer_andersen@outlook.com
description = Assembly for Design & Analysis - A python library for structural analysis and design
url = https://github.com/krande/adapy
project_urls = 
	Code=https://github.com/krande/adapy
	Issues=https://github.com/krande/adapy/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3
license_files = LICENSE
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Scientific/Engineering
	Topic :: Utilities
keywords = 
	Python
	Data Science
	Structural Analysis
	Interoperability
	IFC
	CAD
	Automation
	file formats
	scientific
	engineering
	finite elements

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src
